Version 1.3.0-rc2
  * Fix POST Request issue (ticket #34)
  * Fix COOKIE gesture (ticket #79)

Version 1.3.0-rc1

  * Updating ZOO.Class object with the OpenLayers.Class Updating ZOO.Class with the (ticket #64)
  * Correct the content of proj4js (ticket #63)
  * Enhance the COOKIE gesture (ticket #68)
  * Support for dataInputs URLEncoded and xlink:href (ticket #62)
  * Use the same object structure for JavaScript arguments than for Python
  * Add the Normalized Difference Vegetation Index service
  * Add importScripts function to JavaScript support (ticket #66)
  * Add multiple inputs values for the same identifier (ticket #72)
  * Add Python ZOO-API to access ZOO-Kernel internel functions
  * Add a [headers] section in main.cfg file to add specifics to header returned
  * Add support for multiple outputs for both GET and POST requests
  * Add Content-Length to the headers if the result is sized
  * Add Content-Disposition to the headers if the result contains a filename
  * Add support for sending headers through JS ZOO-api
  * Add support for multi-valued inputs in JS ZOO-api
  * Fixing issue about invalid status document #73
  * Add Python-3.3.0 support
  * Update documentation
  * Add MapServer W*S Support documentation #34

Version 1.2.0-rc3

  * add basic SOAP Envelope support (ticket #49)
  * support request when Content-Length header is not set by the client (ticket #57)
  * fix issue when POST request is empty (ticket #45)
  * add minimalist cache system (ticket #51)
  * fix Python support (ticket #29)

Verseion 1.2.0-rc2

  * fix for process to run in background
  * add support for ALL identifier for !DescribeProcess
  * add a small test suite in the testing directory to test ogr base-vect-ops
  * big fix for storage of Session maps on disk
  * support for {{{<Default />}}} node in ZCFG files
  * fastcgi version now support both !GetCapabilities and !DescribeProcess requests

Version 1.2.0-rc1

  * add WIN32 support