@@ -9,6 +9,7 @@ ZOO-Kernel License
 ------------------
 
 Copyright (c) 2009-2013 GeoLabs SARL
+Copyright 2010-2011 Fondazione Edmund Mach. All rights reserved.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy 
 of this software and associated documentation files (the “Software”), to deal
